# CS-24-333-Developing-a-central-hub-for-gender-outcome-programs-in-STEMM

./: README.md  package-lock.json
Database Files/: CS_24_333-ddl.sql  login_form_submission-ddl.sql
Documentation/: Status Reports.docx  Technology Specifications.docx  User Tutorial.docx
Notes and Research/: Readme.md
OpenAI Component/: README.md
OpenAI Component/client/: .env.local  .gitignore  package-lock.json  package.json
OpenAI Component/server/: .env  server.py
Status Reports/: Readme.md  Week 3.html  Week 3.qmd  Week10_StatusReport.docx  Week11_StatusReport.docx  Week12_StatusReport.docx  Week1_StatusReport.docx  Week2_StatusReport.docx  Week3_StatusReport.docx  Week4_StatusReport.docx  Week5_StatusReport.docx  Week6_StatusReport.docx  Week7_StatusReport.docx  Week8_StatusReport.docx  Week9_StatusReport.docx
src/: package-lock.json
src/agie/: package-lock.json  package.json
src/agie-repository/: README.md  package-lock.json  package.json
src/agie-repository/Auth/: AuthContext.js
src/agie-repository/components/: Footer.js  Navbar.js  Searchbar.js  dropdown.js  pieChart.js
src/agie-repository/pages/: About.js  CreateLogin.js  Login.js  Results.js  _app.js  index.js  search.js  selected.js
src/agie-repository/styles/: admin.module.css  globals.css  login.module.css
src/agie-repository/util/: promt.ts
src/agie/app/: globals.css  page.js
src/agie_project/: package-lock.json  package.json
src/capstone-backend/: pyproject.toml
src/capstone-backend/src/: .env  CS_24_333-ddl.sql  CS_24_333.html  CS_24_333.py  CS_24_333.qmd
(+42 files in other folders)
